--- a/app/style.scss
+++ b/app/style.scss
@@ -8,21 +8,11 @@ canvas {
 	background: rgb(255, 255, 255);
 	background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(71, 71, 71, 1) 0%, rgba(0, 0, 0, 1) 100%);
 	height: 100vh;
+	width: 110vw;
 	// transition: 1s;
 	& .active {
 		width: 80%;
 	}
-}
-
-.c-div {
-	transition: 0.6s;
-	margin-left: -5%;
-	&.active {
-		margin-left: -10%;
-	}
-}
-.main {
-	display: flex;
 }
 .menu {
 	padding: 30px;
@@ -33,24 +23,37 @@ canvas {
 	background-color: black;
 	width: 20vw;
 	height: 100vh;
-	right: -20%;
+	right: -22vw;
 	transition: 0.6s;
 	& h1 {
 		margin-top: 45px;
 		margin-bottom: 15px;
-		font-size: 30px;
+		font-size: 3.5vh;
 		text-align: left;
 	}
 	& p {
 		text-align: left;
+		font-size: 2vh;
 	}
 	&.active {
-		right: 0%;
+		right: -1.6vw;
 	}
 }
+.c-div {
+	transition: 0.6s;
+	margin-left: -3%;
+	&.active {
+		margin-left: -10%;
+	}
+}
+.main {
+	display: flex;
+}
+
 .cross {
 	cursor: pointer;
 	position: absolute;
 	top: 1%;
 	left: 3%;
 }
+//z-proger bspwm
